--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ body{
 .submit-btn{
   background-color: orange;
   color: whitesmoke;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bolder;
   font-size: 1.2rem;
   outline: none;
@@ -48,11 +49,13 @@ body{
   margin-left: 10px;
 }
 .main-title{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 1rem;
   color: orangered;
   text-transform: uppercase;
 }
 .main-ing{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1rem;
   color: purple;
   font-style: italic;
