--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,87 @@
     transform: rotate(360deg);
   }
 }
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  background-color: rgb(202, 222, 240);
+}
+
+.main-container{
+  height: 120px;
+  width: 500px;
+  background-color: rgb(104, 139, 245);
+  text-align: center;
+  margin-top: 100px;
+  margin-left: 400px;
+  padding: 10px;
+}
+
+.search-field,.search-btn{
+  width: 100%;
+  height: 40px;
+  margin-bottom: 10px;
+}
+.search-field{
+  font-size: 1.3rem;
+  color: rgb(1, 1, 160);
+  outline: none;
+}
+
+.search-btn{
+  background-color: rgb(238, 178, 67);
+  color: whitesmoke;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bolder;
+  font-size: 1.2rem;  
+  text-align: center;
+  outline: none;
+  border: none;
+  padding-top: 8px;
+  box-shadow: 0px 0px 1px #111;
+}
+
+.main-card{
+  background-color: rgb(236, 236, 236);
+  height: 340px;
+  width: 300px;
+  box-shadow: 1px 2px 1px #111;
+  padding: 40px;
+  display: inline-block;
+  margin-right: 20px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+
+.main-title{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1rem;
+  color: orangered;
+  text-transform: uppercase;
+}
+
+.main-ing{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1rem;
+  color: purple;
+  font-style: italic;
+}
+
+/* body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+} */
